cmake_minimum_required(VERSION 3.11.0)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./build)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ./bin)
project(carg VERSION 0.0.1)
set(CMAKE_CXX_STANDARD 23)
include_directories(${CMAKE_SOURCE_DIR}/include)

IF(Example STREQUAL "threadsafe")
    add_executable(carg src/example_ts.c)
ELSE()
    add_executable(carg src/example.c)
ENDIF()

IF (MSVC)
    target_compile_definitions(carg PRIVATE _CRT_SECURE_NO_WARNINGS)
    set(CMAKE_EXE_LINKER_FLAGS "/IGNORE:4099 /IGNORE:4098 /IGNORE:4996")
ENDIF()

IF (Sanitize STREQUAL "address")
    IF (MSVC)
        target_compile_options(carg PRIVATE /fsanitize=address)
    ELSE()
        target_compile_options(carg PRIVATE -g -fsanitize=address -fno-omit-frame-pointer -O0)
        target_link_options(carg PRIVATE -fsanitize=address)
    ENDIF()
ENDIF()-